<resources>
    <string name="app_name">Universidad</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Cedula</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar Sesión</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Bienvenido !"</string>
    <string name="invalid_username">Cedula Invalida</string>
    <string name="invalid_password">Contraseña tiene que ser >2 caracteres</string>
    <string name="login_failed">"Cedula o Contraseña Incorrecta"</string>
    <string name="title_activity_home">Principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Universidad</string>
    <string name="nav_header_subtitle">2020</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Opciones</string>
    <string name="action_search">Buscar</string>

    <string name="delete">ELIMINAR</string>
    <string name="edit">EDITAR</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_carreras">Carreras</string>
    <string name="menu_cursos">Cursos</string>
    <string name="logout">Salir</string>

    <string name="addCarNombre">Nombre</string>
    <string name="addCarCodigo">Codigo</string>
    <string name="addCarTitulo">Titulo</string>

    <string name="addCurCodigo">Codigo</string>
    <string name="addCurNombre">Nombre</string>
    <string name="addCurCreditos">Creditos</string>
    <string name="addCurHoras">Horas</string>
    <string name="addCurAnnio">Año</string>

    <string name="searchL">Ingrese Nombre</string>


    <string name="home_second">Home Second</string>
    <string name="title_activity_carreras12">Carreras</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_cursos12">Cursos</string>

    <string-array name="titulosCarreras">
        <item>
            "Bachillerato"
        </item>
        <item>
            "Licenciatura"
        </item>
        <item>
            "Maestria"
        </item>
    </string-array>

    <string-array name="ciclos">
        <item>
            1
        </item>
        <item>
            2
        </item>
    </string-array>
    <string name="title_activity_carreras">CarrerasActivity</string>
    <string name="title_activity_cursos">CursosActivity</string>


</resources>
