<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_carreras"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_carreras" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_grupos" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_salir"
            android:title="@string/logout" />
    </group>

</menu>
